<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headerTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_contacts_details"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/blueColor"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:id="@+id/county_cardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:contentPadding="5dp"
        app:cardCornerRadius="10dp"
        android:elevation="5dp"
        app:cardElevation="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEt"
                android:hint="@string/name"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/sub_county_cardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:contentPadding="5dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        app:cardElevation="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone">
            <com.google.android.material.textfield.TextInputEditText
                android:background="@color/colorAccent"
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp">
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textColor="@color/blueColor"
            android:layout_marginEnd="10dp" />
        <Button
            android:id="@+id/sendBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/send"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textColor="@color/blueColor"
            android:layout_marginEnd="10dp" />
    </LinearLayout>
</LinearLayout>